Enunciado todo en el mismo tamaño

--- a/informetp1.tex
+++ b/informetp1.tex
@@ -51,7 +51,7 @@
             \texttt{ dirección de e-mail }                                              \\
             Diego Meler, \textit{Padrón Nro. 91.299}                     \\
             \texttt{ dmeller@fi.uba.ar }                                              \\[2.5ex]
-            \normalsize{Grupo Nro.  - 2do. Cuatrimestre de 2016}                       \\
+            \normalsize{Grupo Nro.  \ \ \  - 2do. Cuatrimestre de 2016}                       \\
             \normalsize{66.20 Organización de Computadoras}                             \\
             \normalsize{Facultad de Ingeniería, Universidad de Buenos Aires}            \\
        }
@@ -82,7 +82,7 @@ Realizamos el Juego de la Vida de Conway descripto en el enunciado, realizamos u
 \end{figure}
 
 \includepdfset{pages={2-},nup=1x1,landscape=false}
-\includepdf[scale=0.85, pagecommand={\thispagestyle{fancy}}]{tp1-c2-2016.pdf}
+\includepdf[ pagecommand={\thispagestyle{fancy}}]{tp1-c2-2016.pdf}
 
 \section{Diseño e Implementación del programa}
 
