Agrego mi padrín y mi email

--- a/informetp1.tex
+++ b/informetp1.tex
@@ -47,8 +47,8 @@
 \title{		\textbf{Trabajo práctico 1: conjunto de instrucciones MIPS}}
 
 % Información sobre los autores.
-\author{	Tomas Franco, \textit{Padrón Nro. 00.000}                     \\
-            \texttt{ dirección de e-mail }                                              \\
+\author{	Tomas Franco, \textit{Padrón Nro. 91.013}                     \\
+            \texttt{ tomasnfranco@gmail.com }                                              \\
             Diego Meler, \textit{Padrón Nro. 91.299}                     \\
             \texttt{ dmeller@fi.uba.ar }                                              \\[2.5ex]
             \normalsize{Grupo Nro.  \ \ \  - 2do. Cuatrimestre de 2016}                       \\
