Se quita el enunciado del informe para adjuntarlo por separado

--- a/informetp1.tex
+++ b/informetp1.tex
@@ -76,13 +76,7 @@ Realizamos el Juego de la Vida de Conway\cite{CONWAY} descripto en el enunciado,
 
 \section{Enunciado}
 
-\begin{figure}
-   \includepdf[pages={1},nup=1x1]{tp1-c2-2016.pdf}      
- \label{fig:Test}
-\end{figure}
-
-\includepdfset{pages={2-},nup=1x1,landscape=false}
-\includepdf[ pagecommand={\thispagestyle{fancy}}]{tp1-c2-2016.pdf}
+Se adjunta el enunciado al informe.
 
 \section{Diseño e Implementación del programa}
 
